refactor: 가독성 및 코드 분리